--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							<h2>My Portfolio</h2>
 							<p>This will be a showcase of my Projects!</p>
 						</header>
+						<span class="image"><img src="images/me.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -118,11 +119,13 @@
 							</div>
 						</div>
 					</div>
-					<a href="#eight" class="goto-next scrolly">Next</a>
+					<a href="#seven" class="goto-next scrolly">Next</a>
 				</section>
 
-				<!-- Eight -->
-				<section id="eight" class="spotlight style3 right">
+
+				
+				<!-- Seven -->
+				<section id="seven" class="spotlight style3 right">
 					<span class="image fit main"><img src="images/Python Calculator.png" alt="" /></span>
 					<div class="content">
 						<header>
@@ -144,11 +147,11 @@
 							<li><a href="https://github.com/Kevcar98/Python-Calculator" target="_blank" class="button">View</a></li>
 						</ul>
 					</div>
-					<a href="#nine" class="goto-next scrolly">Next</a>
+					<a href="#eight" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Nine -->
-				<section id="nine" class="spotlight style4 left">
+			<!-- Eight -->
+				<section id="eight" class="spotlight style4 left">
 					<span class="image fit main bottom"><img src="images/Bull cow.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -157,6 +160,23 @@
 						<p>This project was done in the Unreal engine. It was made with the aid of “Unreal Engine C++ Developer: Learn C++ and Make Video Games” on Udemy to learn how to use Unreal Engine and C++.</p>
 						<ul class="actions">
 							<li><a href="https://github.com/Kevcar98/BullCowGame" target="_blank" class="button">View</a></li>
+						</ul>
+					</div>
+					<a href="#nine" class="goto-next scrolly">Next</a>
+				</section>
+
+
+
+				<!-- Nine -->
+				<section id="nine" class="spotlight style1 right">
+					<span class="image fit main bottom"><img src="images/NewsSearch_Screenshot_News.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>News Search App</h2>
+						</header>
+						<p>NewsSearch is an Android application that allows users to search for news articles based on keywords and date ranges. The app utilizes the News API to fetch real-time news data and provides a user-friendly interface for browsing and exploring news articles.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Kevcar98/NewsSearch" target="_blank" class="button">View</a></li>
 						</ul>
 					</div>
 					<a href="#header" class="goto-next scrolly">Next</a>
