--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a software developer with a passion for creating innovative solutions. With a background in computer science and experience in various programming languages and frameworks, I am dedicated to continuous learning and professional growth.</p>
+            <p>I am a first-class Computer Science graduate from University of Greenwich looking to use my excellent programming and analytical skills. I am a hard worker, reliable, enthusiastic and willing to learn. My knowledge in programming will prepare me for a role within this exciting and challenging technology industry.</p>
         </div>
     </section>
     <section class="projects-header">
