--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
     <header>
         <h1>Kevin Caraballo Rodrigues</h1>
-        <p>Aspiring Software Developer</p>
+        <p>Aspiring Software Engineer</p>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
