--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Kevin Caraballo Rodrigues | Portfolio</title>
     <meta charset="utf-8" />
@@ -11,62 +12,75 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+
         header {
             background: #333;
             color: #fff;
             padding: 1em 0;
             text-align: center;
         }
+
         header h1 {
             margin: 0;
             font-size: 2em;
         }
+
         header p {
             margin: 0;
             font-size: 1.2em;
         }
+
         nav {
             margin-top: 1em;
         }
+
         nav ul {
             list-style: none;
             padding: 0;
             display: flex;
             justify-content: center;
         }
+
         nav ul li {
             margin: 0 1em;
         }
+
         nav ul li a {
             color: #fff;
             text-decoration: none;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 2em;
         }
+
         .intro {
             text-align: center;
             padding: 2em 0;
         }
+
         .intro img {
             border-radius: 50%;
             max-width: 150px;
             margin-bottom: 1em;
         }
+
         .about {
             background: #333;
             color: #fff;
             padding: 2em;
             text-align: center;
         }
+
         .projects-header {
             text-align: center;
             padding: 1em 0;
             background: #444;
             color: #fff;
         }
+
         .projects {
             display: flex;
             flex-wrap: wrap;
@@ -74,11 +88,12 @@
             background: #f4f4f4;
             padding: 2em 0;
         }
+
         .project {
             background: #fff;
             margin: 1em;
             padding: 1em;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             flex: 1 1 calc(33% - 2em);
             box-sizing: border-box;
             text-align: center;
@@ -86,12 +101,15 @@
             flex-direction: column;
             justify-content: space-between;
         }
+
         .project h3 {
             margin-top: 0;
         }
+
         .project p {
             flex-grow: 1;
         }
+
         .project a {
             margin-top: 1em;
             background: #333;
@@ -101,12 +119,14 @@
             border-radius: 5px;
             align-self: center;
         }
+
         #contact {
             background: #f4f4f4;
             color: #333;
             padding: 2em;
             text-align: center;
         }
+
         footer {
             background: #333;
             color: #fff;
@@ -114,13 +134,16 @@
             padding: 2em 0;
             margin-top: 2em;
         }
+
         .icons {
             margin-top: 1em;
         }
+
         .icons li {
             display: inline;
             margin: 0 0.5em;
         }
+
         .icons li a {
             color: #333;
             font-size: 1.5em;
@@ -128,10 +151,11 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Kevin Caraballo Rodrigues</h1>
-        <p>Aspiring Software Engineer</p>
+        <p>Aspiring Software Developer</p>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -150,7 +174,9 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a first-class Computer Science graduate from University of Greenwich looking to use my excellent programming and analytical skills. I am a hard worker, reliable, enthusiastic and willing to learn. My knowledge in programming will prepare me for a role within this exciting and challenging technology industry.</p>
+            <p>I am a software developer with a passion for creating innovative solutions. With a background in computer
+                science and experience in various programming languages and frameworks, I am dedicated to continuous
+                learning and professional growth.</p>
         </div>
     </section>
     <section class="projects-header">
@@ -160,52 +186,72 @@
         <section class="projects" id="projects">
             <div class="project">
                 <h3>Final Year Project</h3>
-                <p>Developed an Android app using Java and Android Studio, implementing an EKF SLAM for improved indoor navigation.</p>
+                <p>Developed an Android app using Java and Android Studio, implementing an EKF SLAM for improved indoor
+                    navigation.</p>
                 <a href="https://github.com/Kevcar98/Final-Year-Project" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Critical Path Project</h3>
-                <p>Collaborated on a project using Java and Kotlin to calculate the critical path for a user-specified project, determining the minimum time required to complete all activities.</p>
+                <p>Collaborated on a project using Java and Kotlin to calculate the critical path for a user-specified
+                    project, determining the minimum time required to complete all activities.</p>
                 <a href="https://github.com/Kevcar98/UNI-JVM-CW" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Network Distributed Communication</h3>
-                <p>Created a multi-threaded network communication app using Java, enabling communication across different machines.</p>
-                <a href="https://github.com/elijahnikov/Network-Distributed-Communication" target="_blank">View on GitHub</a>
+                <p>Created a multi-threaded network communication app using Java, enabling communication across
+                    different machines.</p>
+                <a href="https://github.com/elijahnikov/Network-Distributed-Communication" target="_blank">View on
+                    GitHub</a>
             </div>
             <div class="project">
                 <h3>Note Maker Project</h3>
-                <p>Developed a note-taking program that allows users to create, read, search, and convert notes to .docx files.</p>
+                <p>Developed a note-taking program that allows users to create, read, search, and convert notes to .docx
+                    files.</p>
                 <a href="https://github.com/Kevcar98/Java-Coursework" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Python Calculator</h3>
-                <p>Built a calculator in Python with functionalities including addition, subtraction, multiplication, division, and trigonometric operations.</p>
+                <p>Built a calculator in Python with functionalities including addition, subtraction, multiplication,
+                    division, and trigonometric operations.</p>
                 <a href="https://github.com/Kevcar98/Python-Calculator" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Bull Cow Game</h3>
-                <p>Created a game using Unreal Engine and C++, following the “Unreal Engine C++ Developer” course on Udemy.</p>
+                <p>Created a game using Unreal Engine and C++, following the “Unreal Engine C++ Developer” course on
+                    Udemy.</p>
                 <a href="https://github.com/Kevcar98/BullCowGame" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>News Search App</h3>
-                <p>Developed an Android application that searches for news articles using the News API, with keyword and date range filters.</p>
+                <p>Developed an Android application that searches for news articles using the News API, with keyword and
+                    date range filters.</p>
                 <a href="https://github.com/Kevcar98/NewsSearch" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project">
+                <h3>Web-Scraping and Data Analysis Project</h3>
+                <p>This project involves creating Python scripts to scrape data from the "Books to Scrape" website, and
+                    perform data analysis with the help of the scraped data.</p>
+                <a href="https://github.com/Kevcar98/Web-Scraping-and-Data-Analysis-Project" target="_blank">View on
+                    GitHub</a>
             </div>
         </section>
     </div>
     <section id="contact">
         <h2>Contact</h2>
         <ul class="icons">
-            <li><a href="https://www.linkedin.com/in/Kevin-Caraballo-Rodrigues" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-            <li><a href="https://github.com/Kevcar98" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-            <li><a href="mailto:kevcarrod@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-            <li><a href="files/NEW CV.pdf" target="_blank" class="icon solid alt fa-file-alt"><span class="label">CV</span></a></li>
+            <li><a href="https://www.linkedin.com/in/Kevin-Caraballo-Rodrigues" target="_blank"
+                    class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+            <li><a href="https://github.com/Kevcar98" target="_blank" class="icon brands alt fa-github"><span
+                        class="label">GitHub</span></a></li>
+            <li><a href="mailto:kevcarrod@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span
+                        class="label">Email</span></a></li>
+            <li><a href="files/NEW CV.pdf" target="_blank" class="icon solid alt fa-file-alt"><span
+                        class="label">CV</span></a></li>
         </ul>
     </section>
     <footer id="footer">
         <p>&copy; 2024 Kevin Caraballo Rodrigues. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
