--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
                 <a href="https://github.com/Kevcar98/Web-Scraping-and-Data-Analysis-Project" target="_blank">View on
                     GitHub</a>
             </div>
+            <div class="project">
+                <h3>My Custom Tic-tac-toe</h3>
+                <p>This Python application implements a customizable Naughts and Crosses (Tic-Tac-Toe) game using the
+                    tkinter library for the graphical user interface. The game allows players to specify the size of the
+                    board and the number of consecutive symbols needed to win, providing a flexible gaming experience.</p>
+                <a href="https://github.com/Kevcar98/My-Custom-Tic-tac-toe" target="_blank">View on
+                    GitHub</a>
+            </div>
         </section>
     </div>
     <section id="contact">
