--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
                 <a href="https://github.com/Kevcar98/My-Custom-Tic-tac-toe" target="_blank">View on
                     GitHub</a>
             </div>
+            <div class="project">
+                <h3>Snake Game</h3>
+                <p>This project is a Java implementation of the classic Snake game. It features a GUI where the player
+                    controls a snake, aiming to eat food while avoiding collisions with the walls or itself. The game
+                    includes different types of food that affect the gameplay in various ways.</p>
+                <a href="https://github.com/Kevcar98/Snake" target="_blank">View on
+                    GitHub</a>
+            </div>
         </section>
     </div>
     <section id="contact">
