--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">Kevin CR</a>
+            <a href="#home" class="nav-logo">Kevin Portfolio</a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
